victoriametrics/single/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vm-metrics-gateway
  namespace: victoriametrics # 与 Service 和 HTTPRoute 放在同一命名空间
spec:
  addresses:
    - type: IPAddress
      value: 192.168.3.100
  # 替换成你集群中实际安装的 Gateway Controller Class 名称
  gatewayClassName: cilium
  listeners:
    - name: http-vm-api
      protocol: HTTP
      port: 8428
      # allowedRoutes:
      #   namespaces:
      #     from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-metrics-route
  namespace: victoriametrics
spec:
  parentRefs:
    - name: vm-metrics-gateway # 绑定到上面创建的 Gateway
  hostnames:
    - "vm.app.com" # <-- 替换成你希望访问 VictoriaMetrics 的域名
  rules:
    - matches:
        # 匹配所有路径，用于查询和写入API
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vm-single-victoria-metrics-single-server # Service 名称
          port: 8428 # 路由到 VictoriaMetrics 的 HTTP 端口
